# bio_utils_rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml
src/: errors.rs  lib.rs  test_utils.rs
src/aminoacid/: codon_table.rs  mod.rs  translation.rs  utils.rs
src/io/: mod.rs  reader.rs  types.rs  writer.rs
src/kmers/: hash.rs  kmerize.rs  mod.rs
src/nucleotide/: entropy.rs  homopolymer.rs  metrics.rs  mod.rs  search.rs  seq.rs  statics.rs
src/simd_sketch/: closed_syncmer.rs  index.rs  minimizer.rs  mod.rs  open_syncmer.rs  traits.rs  types.rs
