[package]
name = "bio_utils_rs"
version = "0.1.0"
edition = "2024"


[lib]
src = ".src/lib.rs"

[dependencies]
bio = "3.0.0"
flate2 = "1.1.9"
lazy_static = "1.5.0"
memchr = "2.8.0"
needletail = "0.6.3"
rstest = "0.26.1"
serde = "1.0.228"
serde_json = "1.0.149"
tempfile = "3.25.0"
thiserror = "2.0.18"
