[package]
name = "bio_utils_rs"
version = "0.0.1"
edition = "2024"
authors = ["oscar.aspelin@gmail.com"]
description = "Utilities for bioinformatic analysis."
license = "Apache-2.0"
repository = "https://github.com/OscarAspelin95/bio_utils_rs"
keywords = ["bioinformatics", "utilities"]

[dependencies]
bio = "3.0.0"
flate2 = "1.1.9"
lazy_static = "1.5.0"
memchr = "2.8.0"
needletail = "0.6.3"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.25.0"
